syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Shared.GrpcContracts.User";

service UserConfigService {
	rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc VerifyOtp(VerifyOtpRequest) returns (VerifyOtpResponse);
}

// Đăng ký
message RegisterUserRequest {
	string user_name = 1;
	string password = 2;
	string full_name = 3;
	google.protobuf.Timestamp birth_date = 4;
	string phone_number = 5;
	string email = 6;
	string address = 7;
	google.protobuf.Int32Value time_zone = 8;
	bool is_active = 9;
}

message RegisterUserResponse {
	bool success = 1;
	string message = 2;
	string user_id = 3;
}

// Xác thực OTP
message VerifyOtpRequest {
    string email = 1;
    string otp_code = 2;
}

message VerifyOtpResponse {
    bool success = 1;
    string message = 2;
}

// Đăng nhập
message LoginRequest {
	string user_name = 1;
	string email = 2;
	string password = 3;
}

message LoginResponse {
	string access_token = 1;
}